# simple_ecommerce_djrest

./: .dockerignore  .gitignore  Dockerfile  DockerfileLocal.dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.in  requirements.txt
api/: serializers.py  urls.py  views.py
config/: settings.py  urls.py
docs/: accounting_for_simple_ecommerce.md  app_design_purchases_weight_profit.md  audit_mixins.md  best_practice_for_djrest_react_authentication.md  create_orders_apiview.md  data_model.md  difference_between_mixins_and_generics.md  docker_hosting_options.md  ecommerce_data_model_one.md  ecommerce_data_model_two.md  erp_for_simple_ecommerce.md  image_field_explanation.md  making_product_inventory.md  mediar_root_aws_s3.md  multi_currency_prices.md  plan_to_split_purchase.md  prices_in_different_currencies.md  product_common_cost_and_profit.md  product_images_and_cart_management.md  products_belongin_to_tag.md  react_multi_language_recom_by_gpt.md  static_files_from_s3.md  uv_related.md
docs/deploying_to_render/: about_render_yaml_file.md  collectstatic_fails.md  dockerfile_for_render.md  other_render_related.md  (+1 more)
ecommerce/: admin.py  apps.py  permissions.py  profit_rate.py  serializers.py  signals.py  urls.py  views.py  weight_cost.py
experiments/: add_accounts.py  add_currencies.py  check_models.py  email_experiment.py  inspect_models.py  populate_fx_rates.py  populate_product_total_inventories.py  products_00.csv  purchase_summary.py
py_wheels/: sampytools-1.0.0-py3-none-any.whl
templates/: index.html
(+105 files in other folders)
