[project]
name = "simple-ecommerce-djrest"
version = "0.1.0"
description = "Simple Ecommerce Django RESTFRAMEWORK backend application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.14",
    "dj-rest-auth>=7.0.1",
    "django>=5.2.3",
    "django-allauth==65.4.1",
    "django-cors-headers>=4.7.0",
    "django-crum>=0.7.9",
    "django-storages>=1.14.6",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "gunicorn>=23.0.0",
    "ipython>=9.3.0",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "psycopg>=3.2.9",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sampytools>=1.0.0",
    "sqlalchemy>=2.0.41",
    "tqdm>=4.67.1",
    "whitenoise>=6.9.0",
]

[tool.setuptools]
packages = ["ecommerce", "api", "config"]
